fix small gallery and sponsor font sizes and spacing

--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -25,3 +25,9 @@
   border-radius: 50%;
 }
 
+.scholar-p {
+  font-size: 1.5rem;
+}
+.line-height-1 {
+  line-height: 2.5;
+}
